# octopus-to-tado-sync

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  backfill_by_week.py  backfill_octopus_tado_rates.py  pyproject.toml  requirements-dev.txt  requirements.txt  sync_octopus_tado.py  sync_octopus_tado_rates.py  tox.ini
.github/: funding.yml
.github/workflows/: backfill_consumption.yml  backfill_rates.yml  ci.yml  schedule_M_sync.yml  schedule_T_sync.yml  schedule_sync.yml  sync.yml
tests/: test_script.py
